frontend/test/should_pass/pow.grg
using attrib_model_001;

rule r {
	nd : NDOUBLE;
	-ed:EDOUBLE->;
	
	if {
		nd.a == pow(ed.a, nd.a);
	}

	modify {
		eval {
			nd.a = pow(ed.a, nd.a);
		}
	}
}

