frontend/test/should_fail/pattern_007.grg
using patt;

pattern Foo
{
	n:Node -x1->;
    if { x3 == x1; }
	
	modify(a:A, b:B) {
		x2 --> n <-- b;
        eval {
            x3.a = 7;
        }
	}	
}

rule r {
	foo:Foo();

	modify {
		a:A;
		b:B; 
		foo(a, b);
	}
}
